; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/kernel32/extr_file.c_test_FindNextFileA.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/kernel32/extr_file.c_test_FindNextFileA.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.test_FindNextFileA.buffer = private unnamed_addr constant [5 x i8] c"C:\\*\00", align 1
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [38 x i8] c"FindFirstFile on C:\\* should succeed\0A\00", align 1
@TRUE = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [24 x i8] c"Failed to close handle\0A\00", align 1
@ERROR_NO_MORE_FILES = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [48 x i8] c"GetLastError should return ERROR_NO_MORE_FILES\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_FindNextFileA to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_FindNextFileA() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca [5 x i8], align 1
  %5 = bitcast [5 x i8]* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 1 %5, i8* align 1 getelementptr inbounds ([5 x i8], [5 x i8]* @__const.test_FindNextFileA.buffer, i32 0, i32 0), i64 5, i1 false)
  %6 = call signext i8 (...) @get_windows_drive()
  %7 = getelementptr inbounds [5 x i8], [5 x i8]* %4, i64 0, i64 0
  store i8 %6, i8* %7, align 1
  %8 = getelementptr inbounds [5 x i8], [5 x i8]* %4, i64 0, i64 0
  %9 = call i64 @FindFirstFileA(i8* %8, i32* %2)
  store i64 %9, i64* %1, align 8
  %10 = load i64, i64* %1, align 8
  %11 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %12 = icmp ne i64 %10, %11
  %13 = zext i1 %12 to i32
  %14 = call i32 @ok(i32 %13, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  br label %15

15:                                               ; preds = %19, %0
  %16 = load i64, i64* %1, align 8
  %17 = call i64 @FindNextFileA(i64 %16, i32* %2)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %15
  br label %15

20:                                               ; preds = %15
  %21 = load i64, i64* %1, align 8
  %22 = call i64 @FindClose(i64 %21)
  %23 = load i64, i64* @TRUE, align 8
  %24 = icmp eq i64 %22, %23
  %25 = zext i1 %24 to i32
  %26 = call i32 @ok(i32 %25, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0))
  %27 = call i32 (...) @GetLastError()
  store i32 %27, i32* %3, align 4
  %28 = load i32, i32* %3, align 4
  %29 = load i32, i32* @ERROR_NO_MORE_FILES, align 4
  %30 = icmp eq i32 %28, %29
  %31 = zext i1 %30 to i32
  %32 = call i32 @ok(i32 %31, i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.2, i64 0, i64 0))
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local signext i8 @get_windows_drive(...) #2

declare dso_local i64 @FindFirstFileA(i8*, i32*) #2

declare dso_local i32 @ok(i32, i8*) #2

declare dso_local i64 @FindNextFileA(i64, i32*) #2

declare dso_local i64 @FindClose(i64) #2

declare dso_local i32 @GetLastError(...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
